apps/argo-workflows/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argo-workflows-server
  namespace: argo-workflows
spec:
  parentRefs:
    - name: internal-gateway
      namespace: gateway
      sectionName: http
    - name: internal-gateway
      namespace: gateway
      sectionName: https
  hostnames:
    - argo-workflows.injunweb.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argo-workflows-server
          port: 2746
