apps/argo-workflows/templates/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argo-workflows-server
  namespace: argo-workflows
spec:
  entryPoints:
    - intweb
    - intwebsec
  routes:
    - kind: Rule
      match: Host(`argo-workflows.injunweb.com`)
      services:
        - name: argo-workflows-server
          port: 2746
